--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,4 @@ services:
         environment:
             - 'POSTGRES_USER=postgres'
             - 'POSTGRES_PASSWORD=postgres'
+            - 'POTGRES_HOST_AUTH_METHOD=trust'
